--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
