--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "webrtc-video-conference",
+  "name": "talktime",
   "version": "1.0.0",
-  "description": "webrtc video conference example (not using webrtc libraries)",
+  "description": "A video conferencing platform connecting volunteers and students, supported by the ADEA Foundation.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npx nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/avoup/webrtc-video-conference.git"
+    "url": "git+https://github.com/nellylemmy/talktime-video-app.git"
   },
   "keywords": [
     "webrtc",
-    "sample",
-    "example",
-    "video",
-    "conference",
-    "tutorial"
+    "video-chat",
+    "education",
+    "volunteer",
+    "maasai",
+    "kenya",
+    "talktime"
   ],
-  "author": "avoup",
-  "license": "MIT",
+  "author": "Nelson Lemein <nelsonlemmy61@gmail.com>",
+  "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/avoup/webrtc-video-conference/issues"
+    "url": "https://github.com/nellylemmy/talktime-video-app/issues"
   },
-  "homepage": "https://github.com/avoup/webrtc-video-conference#readme",
-  "optionalDependencies": {
-    "nodemon": "^2.0.12"
-  },
+  "homepage": "https://github.com/nellylemmy/talktime-video-app#readme",
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.1.3"
